--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "atayahmet/laravel-nestable": "^0.8.7",
         "jailtonsc/laravel-response-xml": "^2.0",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
